# linear-equation-system-parser

./: .gitignore  linear-equations-system-parser.cabal
app/: Main.hs
src/: SystemParser.hs
test/: SystemParserTest.hs
